--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-
 DEBUG=True
 SECRET_KEY=your_secret_key_here
 DATABASE_URL=postgresql://user:password@localhost/dbname
 ALLOWED_HOSTS=yourHosts
+STATIC_URL=/static/
+STATIC_ROOT=/path/to/your/project/staticfiles
+
+CORS_ALLOWED_ORIGINS=https://your-domain.ru
+CSRF_TRUSTED_ORIGINS=https://your-domain.ru
